@@ -267,6 +267,8 @@ S3method(variable.names, lm)
 S3method(vcov, glm)
 #S3method(vcov, gls)
 S3method(vcov, lm)
+S3method(vcov, summary.lm)
+S3method(vcov, summary.glm)
 S3method(vcov, mlm)
 #S3method(vcov, lme)
 S3method(weights, default)
